@@ -7,6 +7,8 @@ for (nm in list.files("R/.", pattern="\\.[r|R]", recursive=FALSE)) {
 	cat("\n")
 }
 
+install.packages(c("devtools", "lavaan", "plyr", "reshape2", "foreign", "tcltk2"), type="source")
+install.packages("roxygen2", type="source")
 library(devtools)
 
 setwd("/Users/Felix/Documents/R/Funktionen/GitHub/fSRM/package")
