@@ -2,15 +2,15 @@ Encoding: UTF-8
 Package: fSRM
 Type: Package
 Title: Social Relations Analyses with roles ("Family SRM")
-Version: 0.3.3
-Date: 2014-03-27
+Version: 0.3.5
+Date: 2014-05-08
 Author: Felix Schönbrodt, Lara Stas, Tom Loeys
 Maintainer: Felix Schönbrodt <felix@nicebread.de>
 Description: The package computes Social Relations Analysis with roles ("Family
     SRM"), using a structural equation modeling approach. Groups ranging from
     three members up to an unlimited number of members are supported and the
     mean structure can be computed. Means and variances can be compared between
-    different groups.
+    different groups of families and between roles.
 Depends:
     lavaan,
     plyr,
