@@ -36,7 +36,7 @@
 # @param selfmode Defines the style how the selfratings are combined with the latent actor and partner effects. If \code{selfmode="cor"} they are correlated (as in REFERENCE), if \code{selfmode="kq"} the k and q paths are calculated (see Kenny & West, 2010)
 
 #' @details
-#' The \code{fSRM} function relies on the \code{lavaan} package for computation: A syntax for the SRM with roles is generated and then passed to the \code{lavaan} function. Hence, many options of the \code{lavaan} function can be used out-of-the-box (additional parameters are passed to the \code{lavaan} function through the \code{...} operator). For example, one can deal with missing values. The default behavior is to exclude families with missing values (listwise deletion). Set \code{fSRM(..., missing="fiml")} for ML / FIML estimation.
+#' The \code{fSRM} function relies on the \code{lavaan} package for computation: A syntax for the SRM with roles is generated and then passed to the \code{lavaan} function. Hence, many options of the \code{lavaan} function can be used out-of-the-box (additional parameters are passed to the \code{lavaan} function through the \code{...} operator). For example, one can deal with missing values. The default behavior is to exclude families with missing values (listwise deletion). Set \code{fSRM(..., missing="fiml")} for ML / FIML estimation. Or, you can request bootstrapped standard errors with \code{fSRM(..., se="boot").
 
 #' @references
 #' Kenny, D. A., & West, T. V. (2010). Similarity and Agreement in Self-and Other Perception: A Meta-Analysis. Personality and Social Psychology Review, 14(2), 196-213. doi:10.1177/1088868309353414
@@ -110,7 +110,7 @@
 #' }
 
 fSRM <-
-function(formula=NULL, data, drop="default", add="", means=FALSE, pairwise=FALSE, diff=FALSE, IGSIM=list(), add.variable=c(), syntax="", group=NULL, setZero="none", ...) {
+function(formula=NULL, data, drop="default", add="", means=FALSE, pairwise=FALSE, diff=FALSE, IGSIM=list(), add.variable=c(), syntax="", group=NULL, ..., setZero="none") {
 	
 	dots <- list(...)
 	setZero <- match.arg(setZero, c("none", "negative", "nonsig"))
@@ -221,13 +221,14 @@ function(formula=NULL, data, drop="default", add="", means=FALSE, pairwise=FALSE
  			  ) {invokeRestart("muffleWarning")}
 	})
 		
-	suppressWarnings(
-		SS <- standardizedSolution(m, type="std.all")
-	)
+	# does not work for boostrapped SEs? But we don't need it anyway ...
+	# suppressWarnings(
+	# 	SS <- standardizedSolution(m, type="std.all")
+	# )
 	
 	res <- list(
 		fit		= m,
-		SS		= SS,
+		#SS		= SS,
 		syntax	= syntax,
 		roles	= roles,
 		actor.id 	= actor.id,
