@@ -4,6 +4,15 @@
 \title{News for package 'fSRM'}
 \encoding{UTF-8}
 
+\section{Version 0.3.5}{
+
+\subsection{Changes}{
+	\itemize{
+		\item Bootstrapping standard errors now properly works (set \code{se="boot"} in the \code{fSRM} function.)
+	}
+}
+}
+
 \section{Version 0.3.3}{
 
 \subsection{Changes}{
